fix:mejorar la verificacion de 2 pasos
